Date: 30/06/2016
What:
    feat: possible to define the names of the files to sue
    feat: improved GUI with kind of labels to give focus to items
    feat: random point when long click on the select multipoint screen
    fix: JSON export files format / indentations
    refactor: the main view
    chore: closed tasks #86, #87, #89
###################################################
Date: 01/07/2016
What:
    feat: time MS for unit time
    doc: update HTML JavaDOC
    chore: new run of Lint, code analysis, unit tests and instrumented tests
###################################################
Date: 04/07/2016
What:
    chore: change the vibration duration (150ms and not 300ms)
    fix: now the notifications are made only if the click is done (changed the command line by adding to it a result token)
    fix: filters the string value in preferences about files' names (minimum length)
    chore: closed task #90
    chore: new run of IT, UT and code analysis
    doc: new build of HTML JavaDoc
###################################################
Date: 05/07/2016
What:
    feat: more i18n
    doc: generate HTML JavaDoc
    chore: new run of unit tests with JUnit, instrumented tests with UIAutoataor and Espresso, code analysis and Lint
    chore: closed task #79
###################################################
Date: 07/07/2016
What:
    chore: deal with several screens configurations: Nexus S, Galaxy A3, Nexus 5, Nexus 6, Nexus 6, Nexus 7, Nexus 10, OnePlus One
    chore: refactor string and array resources (mistakes with i18n about punctuation, smileys, licences, name of the app, Google Play and other trade marks ...)
    chore: new run of IT, UT, code analysis, Lint
    chore: closed tasks #78, #91, #60
    doc: new generation of HTML JavaDoc
###################################################
Date:
What:

###################################################
Date:
What:

###################################################